Rework actions and bindings